fix: remove page overflow

--- a/css/style.prefix.css
+++ b/css/style.prefix.css
@@ -1,89 +1,90 @@
 *,
 *::before,
 *::after {
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	margin: 20px 0;
-	background: #6589f9;
+  margin: 20px 0;
+  background: #6589f9;
+  overflow: hidden;
 }
 
 .grid {
-	max-width: 960px;
-	margin: 0 auto;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
-	-webkit-box-pack: space-evenly;
-	-ms-flex-pack: space-evenly;
-	justify-content: space-evenly;
+  max-width: 960px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
 }
 
 .card {
-	position: relative;
-	-webkit-transition: all 0.4s linear;
-	-o-transition: all 0.4s linear;
-	transition: all 0.4s linear;
-	-webkit-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-	margin: 5px;
+  position: relative;
+  -webkit-transition: all 0.4s linear;
+  -o-transition: all 0.4s linear;
+  transition: all 0.4s linear;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  margin: 5px;
 }
 
 .card,
 .back,
 .front {
-	height: 130px;
-	width: 130px;
+  height: 130px;
+  width: 130px;
 }
 
 .back,
 .front {
-	position: absolute;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
+  position: absolute;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .front {
-	z-index: 2;
-	background: #fab942 url('../img/question.gif') no-repeat center center /
-		contain;
+  z-index: 2;
+  background: #fab942 url("../img/question.gif") no-repeat center center /
+    contain;
 }
 
 .back {
-	-webkit-transform: rotateY(180deg);
-	transform: rotateY(180deg);
-	background-color: #6589f9;
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: center center;
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  background-color: #6589f9;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .selected {
-	-webkit-transform: rotateY(180deg);
-	transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .match .front {
-	background: #6589f9 !important;
+  background: #6589f9 !important;
 }
 
 .main-score {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	text-align: center;
-	max-width: 70%;
-	margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
+  max-width: 70%;
+  margin: 0 auto;
 }
 .score,
 .time {
@@ -96,93 +97,93 @@ body {
 .paused,
 .start,
 .scoreboard {
-	height: 100vh;
-	width: 100vw;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
+  height: 100vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-family: "Press Start 2P", sans-serif;
   font-size: 2rem;
-	text-align: center;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background: rgba(224, 153, 22, 0.8);
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(224, 153, 22, 0.8);
 }
 .paused,
 .scoreboard {
-	display: none;
+  display: none;
 }
 
 .paused {
-	background: #fefefe;
+  background: #fefefe;
 }
 
 .scoreboard p {
-	color: #124dff;
+  color: #124dff;
 }
 
 .start {
-	background: #e52421;
-	color: white;
+  background: #e52421;
+  color: white;
 }
 
 .start-btn:hover {
-	color: #124dff;
+  color: #124dff;
 }
 .start span,
 .scoreboard span {
-	color: #fefefe;
-	cursor: pointer;
+  color: #fefefe;
+  cursor: pointer;
 }
 
 .play-btn,
 .scoreboard span:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 .controls,
 .social {
-	position: fixed;
-	bottom: 20px;
-	right: 20px;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .social {
-	left: 20px;
-	width: 0;
+  left: 20px;
+  width: 0;
 }
 
 .social i,
 .controls i {
-	margin: 1rem;
-	color: #fab942;
-	cursor: pointer;
+  margin: 1rem;
+  color: #fab942;
+  cursor: pointer;
 }
 
 .social i {
-	color: white;
+  color: white;
 }
 
 .fa:hover {
-	-webkit-transform: scale(1.1);
-	-ms-transform: scale(1.1);
-	transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
